--- a/starscape-frontend/index.html
+++ b/starscape-frontend/index.html
@@ -9,5 +9,7 @@
   <body>
     <div id="app"></div>
     <script type="module" src="/src/main.js"></script>
+    <script src="https://apis.google.com/js/api.js"></script>
+    <meta http-equiv="Content-Security-Policy" content="script-src 'self' https://apis.google.com https://www.gstatic.com; object-src 'self'">
   </body>
 </html>
